# Smart_UpperLIMB

./: README.md  pubspec.yaml
android/app/src/main/cpp/: CMakeLists.txt  CompactClassificationEnsemble.c  CompactClassificationEnsemble.h  CompactClassificationTree.c  CompactClassificationTree.h  aggregatePredict.c  aggregatePredict.h  bridge.cpp  bridge_l1.cpp  bridge_l2.cpp  genc.c  genc.h  genc_data.h  genc_emxAPI.c  genc_emxAPI.h  genc_emxutil.c  genc_emxutil.h  genc_initialize.c  genc_initialize.h  genc_internal_types.h  genc_terminate.c  genc_terminate.h  genc_types.h  native_test.cpp  predictOneWithCache.c  predictOneWithCache.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  updateCache.c  updateCache.h
android/app/src/main/cpp/model_layer1/: CompactClassificationEnsemble.cpp  CompactClassificationEnsemble.h  CompactClassificationTree.h  aggregatePredict.cpp  aggregatePredict.h  genc.cpp  genc.h  genc_data.h  genc_initialize.cpp  genc_initialize.h  genc_internal_types.h  genc_terminate.cpp  genc_terminate.h  genc_types.h  predictOneWithCache.cpp  predictOneWithCache.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  updateCache.cpp  updateCache.h
android/app/src/main/cpp/model_layer2/: CompactClassificationEnsemble.cpp  CompactClassificationEnsemble.h  CompactClassificationTree.h  aggregatePredict.cpp  aggregatePredict.h  genc2.cpp  genc2.h  genc2_data.cpp  genc2_data.h  genc2_initialize.cpp  genc2_initialize.h  genc2_internal_types.h  genc2_terminate.cpp  genc2_terminate.h  genc2_types.h  (+13 more)
(+31 files in other folders)
